# video-editing-agent

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
config/: celery.py  settings.py  urls.py
core/: tests.py  urls.py  views.py
docs/specs/: TODO.md  next-steps-handoff.md  phase1-video-to-ad-poc.md
pipeline/: ai.py  context.py  planner.py  quality.py  services.py  tasks.py  test_context.py  test_planner.py  test_quality.py  test_render.py  tests.py
projects/: admin.py  models.py  schemas.py  serializers.py  tests.py  urls.py  views.py
projects/migrations/: 0001_initial.py  0002_draftversion.py  0003_videocontext.py  0004_editplanartifact.py
templates/: home.html  workspace.html
